k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"front","namespace":"project-crypto"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"front"}},"template":{"metadata":{"labels":{"app":"front"}},"spec":{"containers":[{"image":"project-crypto-front:latest","imagePullPolicy":"IfNotPresent","name":"front","ports":[{"containerPort":3000}]}]}}}}

      '
  name: front
  namespace: project-crypto
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: front
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - image: project-crypto-front:latest
          imagePullPolicy: IfNotPresent
          name: front
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
