k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: project-crypto
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 472
        runAsGroup: 472
        fsGroup: 472
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: grafana
          image: grafana/grafana:11.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          volumeMounts:
            # PVC (DB sqlite + plugins)
            - name: grafana-storage
              mountPath: /var/lib/grafana

            # Provisioning (datasources + dashboards providers)
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
              readOnly: true
            - name: grafana-dashboards
              mountPath: /etc/grafana/provisioning/dashboards
              readOnly: true

            # Dashboards JSON (fichiers)
            - name: grafana-dashboard-files
              mountPath: /var/lib/grafana/dashboards
              readOnly: true

      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-pvc

        - name: grafana-datasources
          configMap:
            name: grafana-datasources

        - name: grafana-dashboards
          configMap:
            name: grafana-dashboards

        - name: grafana-dashboard-files
          configMap:
            name: grafana-dashboard-files
