k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"api","namespace":"project-crypto"},"spec":{"ports":[{"name":"http","port":8080,"targetPort":8080}],"selector":{"app":"api"}}}

      '
  name: api
  namespace: project-crypto
spec:
  clusterIP: 10.111.196.123
  clusterIPs:
    - 10.111.196.123
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: api
  sessionAffinity: None
  type: ClusterIP
