k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-crypto
  namespace: project-crypto
spec:
  ingressClassName: nginx
  rules:
    - host: api.crypto.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
    - host: front.crypto.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 3000
    - host: collector.crypto.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collector
                port:
                  number: 8081
